HTML-Restaurant-Menu

--- a/about.html
+++ b/about.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Remember to link to your CSS file! -->
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
+    <main>
+        <h1>About Us</h1>
+        <h2>Our Locations</h2>
+        <ul>
+            <li>Albany,new York, NY</li>
+            <li>Jersey city, NJ</li>
+            <li>Hoboken, NJ</li>
+            <li>Stamford, CT</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="assets/images/about.jpg" alt="Spices">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ut aliquid optio molestiae earum sapiente deserunt, totam laboriosam voluptatem corrupti officiis odio ipsa, sunt animi, aut rerum sequi eos nemo.
+        </p>
+        <footer>
+            <p>Made with ❤️ at H-Thai-ML!</p>
+        </footer>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
