--- a/index.html
+++ b/index.html
@@ -7,11 +7,51 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
+    <div id="holiday">
+        <h1>Thanksgiving Holiday</h1>
+        <p>Our restaurant will be closed on November 25th and 26th in observance of the Thanksgiving holiday.</p>
+    </div>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
+    <main>
+        <h1>H-Thai-ML</h1>
+        <H2>We'll format your meal times!</H2>
+        <div class="service">
+            <h3>Dine-In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        <h2>Come out and join with us!</h2>
+        <img src="assets/images/table-in-restaurant.jpg" alt="Table in Restaurant">
+        <footer>
+            <p>Made with ❤️ at H-Thai-ML!</p>
+        </footer>
+    </main> 
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
     <main>
-        <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
     </main>
 </body>
